fixed font and image overflow and added build

--- a/src/app/Components/crew-page/crew-page.component.scss
+++ b/src/app/Components/crew-page/crew-page.component.scss
@@ -40,6 +40,7 @@ h4 {
 img {
     border-bottom: solid 1px grey;
     height: 100%;
+    max-height: 290px;
 }
 
 .sliderButtonsContainer {
