--- a/src/app/Components/technology-page/technology-page.component.scss
+++ b/src/app/Components/technology-page/technology-page.component.scss
@@ -100,6 +100,7 @@ h5 {
 
 img {
     height: 100%;
+    max-height: 335px;
 }
 
 /* For desktop: */
