--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,6 @@ body {
 }
 
 h1 {
-    font-family: 'Bellefair';
     color: white;
 }
 
@@ -40,7 +39,6 @@ p.title span { // Number for p.title
 }
 
 .bodyTitle { //e.g. Crew name / tech name
-    font-family: 'Bellefair';
     font-size: 30px;
     color: white;
     margin-top: 0;
